add language, adress nummer to Person, fixes #14471

--- a/config/locales/models.pro_natura.de.yml
+++ b/config/locales/models.pro_natura.de.yml
@@ -5,8 +5,13 @@
 
 de:
   activerecord:
-    models:
 
+    attributes:
+      person:
+        language: Sprache
+        adress_nummer: Adress-Nummer
+
+    models:
       ### GROUPS
 
       group/dachverband:
