add role_changes flag to mutations, refs #14928

--- a/config/locales/views.pro_natura.de.yml
+++ b/config/locales/views.pro_natura.de.yml
@@ -13,6 +13,7 @@ de:
     changed_at: Mutationsdatum
     changeset: Mutation
     primary_roles: Rollen
+    role_changes: Rollenanpassung
     primary_layer: Hauptebene
     primary_group: Hauptgruppe
     adress_nummer: adrnr
