--- a/config/locales/models.pro_natura.de.yml
+++ b/config/locales/models.pro_natura.de.yml
@@ -6,11 +6,6 @@
 de:
   activerecord:
 
-    attributes:
-      person:
-        language: Sprache
-        adress_nummer: Adress-Nummer
-
     models:
       ### GROUPS
 
@@ -37,28 +32,45 @@ de:
 
       group/dachverband/pl_jugend:
         one: PL Jugend
+        other: PL Jugend
 
       group/dachverband_gremium/leader:
         one: Leitung
+        other: Leitung
       group/dachverband_gremium/member:
         one: Mitglied
+        other: Mitglieder
 
       group/sektion/admin:
         one: Sektionsverwaltung
+        other: Sektionsverwaltung
 
       group/jugendgruppe/admin:
         one: Verantwortliche/r
+        other: Verantwortliche
       group/jugendgruppe/leader:
         one: Leitung
+        other: Leitung
       group/jugendgruppe/member:
         one: Aktivmitglied
+        other: Aktivmitglieder
 
       group/jugendgruppe_gremium/leader:
         one: Leitung
+        other: Leitung
       group/jugendgruppe_gremium/member:
         one: Aktivmitglied
+        other: Aktivmitglieder
 
       group/jugendgruppe_passive/admin:
         one: Adressverwaltung
+        other: Adressverwaltung
       group/jugendgruppe_passive/member:
         one: Passivmitglied/Extern/Hilfsperson
+        other: Passivmitglieder/Externe/Hilfspersonen
+
+
+    attributes:
+      person:
+        language: Sprache
+        adress_nummer: Adress-Nummer
