--- a/config/locales/views.pro_natura.fr.yml
+++ b/config/locales/views.pro_natura.fr.yml
@@ -11,7 +11,7 @@ fr:
     role_changes: changement de rôle
     primary_layer: niveau principal
     primary_group: groupe principal
-    adress_nummer: adrnr
+    adress_nummer: numéro
     first_name: prénom1
     last_name: nom1
     address: rue
