Only export leaders in mutation export (hitobito/hitobito_pro_natura#15)

--- a/config/locales/views.pro_natura.de.yml
+++ b/config/locales/views.pro_natura.de.yml
@@ -26,6 +26,7 @@ de:
     phone_number_private: telp
     phone_number_mobile: mobilep
     email: emailp
+    birthday: birthday
 
   groups:
     tabs:
